# kiloex-airdrop-claimer

./: Cargo.toml  README.md
data/: config.toml
src/: config.rs  error.rs  main.rs
src/core/: client.rs  kiloex.rs  mod.rs  token.rs  utils.rs
