[package]
name = "kiloex-airdrop-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
alloy = { version = "0.12.6", features = ["full", "dyn-abi", "eip712"] }
thiserror = "2.0.12"
alloy-chains = "0.1.64"
strum = { version = "0.27.1", features = ["derive"] }
toml = "0.8.20"
url = "2.5.4"
serde_json = "1.0"
rand = "0.9.0"
log = "0.4"
pretty_env_logger = "0.4"
